{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 41,
  "lineage": "a9e924c9-f8a1-8def-b452-98093d44651c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myTerraFormInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9160fa81ccffb5",
            "arn": "arn:aws:ec2:eu-west-1:824852318651:instance/i-00ce93accd7597788",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ce93accd7597788",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0b67e6d7067c9ee",
            "private_dns": "ip-10-0-1-231.eu-west-1.compute.internal",
            "private_ip": "10.0.1.231",
            "public_ip": "52.210.9.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01ff0a8715f5eb9bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c97214297e87bc17",
            "tags": {
              "Name": "TFWebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d46663d73c19ead0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824852318651:internet-gateway/igw-0f6c6332246e43aa3",
            "id": "igw-0f6c6332246e43aa3",
            "owner_id": "824852318651",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0127915ea1e2523e3"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TFRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0758ad6ace2a1f10b",
            "owner_id": "824852318651",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6c6332246e43aa3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0127915ea1e2523e3"
          },
          "dependencies": [
            "aws_internet_gateway.main_gw",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTTFAssoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f6d2642bff4dc0d",
            "route_table_id": "rtb-0758ad6ace2a1f10b",
            "subnet_id": "subnet-0c97214297e87bc17"
          },
          "dependencies": [
            "aws_internet_gateway.main_gw",
            "aws_route_table.TFRouteTable",
            "aws_subnet.subnet01",
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824852318651:security-group/sg-0d46663d73c19ead0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d46663d73c19ead0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "824852318651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0127915ea1e2523e3"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824852318651:subnet/subnet-0c97214297e87bc17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c97214297e87bc17",
            "map_public_ip_on_launch": false,
            "owner_id": "824852318651",
            "tags": {
              "Name": "subnet01"
            },
            "vpc_id": "vpc-0127915ea1e2523e3"
          },
          "dependencies": [
            "aws_vpc.tfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:824852318651:vpc/vpc-0127915ea1e2523e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076454def1255500f",
            "default_route_table_id": "rtb-022bd079c134fd35d",
            "default_security_group_id": "sg-0e0ff21d52bfcae49",
            "dhcp_options_id": "dopt-bf57feda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0127915ea1e2523e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-022bd079c134fd35d",
            "owner_id": "824852318651",
            "tags": {
              "Name": "TFVPC"
            }
          }
        }
      ]
    }
  ]
}